# mta-qr-demo

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  IMPLEMENTERS_GUIDE.md  LICENSE  Makefile  README.md  SETUP.md  SPEC.md  docker-compose.yml  interop_test.py
.github/workflows/: ci.yml  pages.yml
browser-demo/: CNAME  README.md  SCALABILITY.md  build.py  index.html  index.template.html
docker/: go.Dockerfile  ts.Dockerfile
go/: go.mod  go.sum
go/issuer/: main.go
go/issuer/log/: env.go  log.go  log_test.go
go/shared/: vectors_test.go
go/shared/cascade/: cascade.go  cascade_test.go
go/shared/cbor/: cbor.go
go/shared/checkpoint/: checkpoint.go
go/shared/merkle/: merkle.go
go/shared/payload/: payload.go
go/shared/signing/: ecdsa_p256.go  ed25519.go  gen_signing_vectors.go  mldsa44.go  signing.go  signing_test.go
go/verifier/: main.go
go/verifier/verify/: testhelpers.go  verify.go  verify_test.go
java/: pom.xml
rust/: Cargo.toml
rust/src/: cascade.rs  lib.rs
rust/src/issuer/: mod.rs
rust/src/signers/: goodkey.rs  local.rs  mod.rs
rust/src/signing/: mod.rs  verify.rs
rust/src/trust/: mod.rs
rust/src/verifier/: mod.rs
test-vectors/: README.md  vectors.json
ts/: package-lock.json  package.json  tsconfig.json
ts/issuer/: main.ts
ts/sdk/: package-lock.json  package.json  tsconfig.json
ts/sdk/src/: browser-bundle.ts  bytes.ts  cascade.ts  cbor.ts  checkpoint.ts  hash.browser.ts  hash.ts  index.ts  (+7 more)
ts/shared/: cbor.ts  checkpoint.ts  merkle.ts  payload.ts  signing.test.ts  signing.ts  vectors.test.ts
ts/verifier/: main.ts
(+21 files in other folders)
